scenarios/uc22-cluster-upgrade/backend/kustomize/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app-resiliency-01
  labels:
    kubernetes.io/metadata.name: demo-app-resiliency-01
  annotations:
    openshift.io/description: "demo-app-resiliency-01"
    openshift.io/display-name: "demo-app-resiliency-01"
