scenarios/uc22-cluster-upgrade/backend/kustomize/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: image-registry.openshift-image-registry.svc:5000/demo-app-resiliency-01/backend:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
