scenarios/uc22-cluster-upgrade/backend/kustomize/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
